--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Employee_Management
 excludes=
+file.reference.javax.mail.jar=C:\\Users\\Kim Alfred\\Downloads\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Kim Alfred\\Downloads\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.mysql-connector-j-8.2.0.jar=C:\\Users\\Kim Alfred\\Downloads\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0\\mysql-connector-j-8.2.0.jar
 file.reference.mysql-connector-j-8.3.0.jar=C:\\Users\\Kim Alfred\\Documents\\Java Jar\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0\\mysql-connector-j-8.3.0.jar
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-8.2.0.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mysql-connector-j-8.3.0.jar}
+    ${file.reference.mysql-connector-j-8.3.0.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
